fixed incorrect body height on mobile devices

--- a/src/app/styles/App.module.scss
+++ b/src/app/styles/App.module.scss
@@ -1,7 +1,6 @@
 .body {
     padding: 24px;
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -12,6 +11,7 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    height: 100%;
 }
 
 @media screen and (max-width: 1200px) {
