--- a/src/widgets/components/Sidebar/Sidebar.module.scss
+++ b/src/widgets/components/Sidebar/Sidebar.module.scss
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-  height: 100vh;
+  height: 100%;
   width: 18vw;
   width: 18%;
   flex-shrink: 0;
